# dlabs_ai_test

./: Dockerfile  README.md  crt.crt  db.db  dbCreator.py  key.key  nginx.conf  pyproject.toml  start-reload.sh  start.sh
server/: icon.py  metadata.py  server.py  tools.py
